--- a/src/donate/Donate.css
+++ b/src/donate/Donate.css
@@ -45,5 +45,5 @@
   text-align: center;
   font-weight: bold;
   letter-spacing: 4px;
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+  text-shadow: 1px 1px 4a rgba(0, 0, 0, 0.2);
 }
