--- a/src/donate/DonationBody.css
+++ b/src/donate/DonationBody.css
@@ -8,7 +8,7 @@
 #Donate_DonationBody h5 {
   color: #2b2b2b;
   font-size: 16px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 400;
   letter-spacing: 2px;
 }
@@ -35,7 +35,7 @@
   height: 20px;
   color: #4b991f;
   font-size: 13px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   letter-spacing: 2px;
 }
 
@@ -49,7 +49,7 @@
   margin-top: 36px;
   color: #2b2b2b;
   font-size: 14px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 400;
   letter-spacing: 1.5px;
   display: flex;
@@ -78,7 +78,7 @@
 }
 
 #Donate_NextButton {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   display: flex;
   justify-content: center;
   align-items: center;
@@ -86,4 +86,19 @@
   height: 30px;
   color: #fff;
   background-color: #4b991f;
+  border: 1.3px solid #4b991f;
+  margin: 0px 8px;
+}
+
+#Donate_BackButton {
+  font-family: "Roboto";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 30px;
+  background-color: #fff;
+  color: #4b991f;
+  border: 1.3px solid #4b991f;
+  margin: 0px 8px;
 }
