Fix MM, YY and CVV numbers

--- a/src/donate/DonationBody.css
+++ b/src/donate/DonationBody.css
@@ -87,7 +87,7 @@
   color: #fff;
   background-color: #4b991f;
   border: 1.3px solid #4b991f;
-  margin: 0px 8px;
+  margin: 0px 8x;
 }
 
 #Donate_BackButton {
@@ -101,4 +101,43 @@
   color: #4b991f;
   border: 1.3px solid #4b991f;
   margin: 0px 8px;
+}
+
+#Donate_DonationBody form {
+  display: flex;
+  flex-direction: column;
+}
+
+#Donate_DonationBody input,
+textarea {
+  font-family: "Roboto";
+  letter-spacing: 1.5px;
+  flex: 1;
+  border: 1px solid #4b991f;
+  border-radius: 4px;
+  padding: 8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  font-size: 11pt;
+}
+
+#Donate_DonationBody form h5 {
+  margin-bottom: 16px;
+}
+
+#Donate_DonationBody ::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: #4b991f;
+}
+#Donate_DonationBody ::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #4b991f;
+}
+#Donate_DonationBody ::-ms-input-placeholder {
+  /* IE 10+ */
+  color: #4b991f;
+}
+#Donate_DonationBody ::-moz-placeholder {
+  /* Firefox 18- */
+  color: #4b991f;
 }
