--- a/src/balanced_plate_alliance/Campaigns.css
+++ b/src/balanced_plate_alliance/Campaigns.css
@@ -8,12 +8,13 @@
 
 #Campaigns h1 {
   color: #000;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   letter-spacing: 0.1em;
   font-size: 24px;
   margin-bottom: 32px;
 }
 
-img {
+#Campaigns img {
   height: 50px;
+  margin-bottom: 16px;
 }
