--- a/src/donate/Amount.css
+++ b/src/donate/Amount.css
@@ -31,7 +31,8 @@
 }
 
 #Donate_Currency {
-  margin: 0px 4px;
+  margin-left: 4px;
+  margin-right: 2px;
   margin-top: 1px;
 }
 
@@ -45,4 +46,5 @@ input#Donate_Other {
   padding: 0px !important;
   margin: 0 !important;
   border: none !important;
+  color: #4b991f;
 }
