--- a/src/donate/DonationHeader.css
+++ b/src/donate/DonationHeader.css
@@ -1,34 +1,46 @@
 #Donate_DonationHeader {
   background-color: #4b991f;
-  display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   border-radius: 16px 16px 0 0;
   padding: 24px;
+  display: flex;
 }
 
 #Donate_DonationHeader h5 {
   margin-top: 0px;
   color: #fff;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 14pt;
   font-weight: regular;
   letter-spacing: 2px;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
+  text-align: center;
 }
 
 #Donate_Steps {
   display: flex;
   flex-direction: row;
+  flex: 1 0;
+  padding: 0px 24px;
+  justify-content: space-between;
+  margin-top: -12px;
+  max-width: 960px;
+}
+
+#Donate_Titles {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  justify-content: space-between;
 }
 
 .Donate_Step {
-  align-items: center;
-  flex-direction: column;
   display: flex;
-  flex: 1;
-  padding: 0px 20px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0;
   z-index: 1;
 }
 
@@ -52,16 +64,16 @@
 .Donate_StepTitle {
   padding-top: 10px;
   font-size: 14px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 300;
   letter-spacing: 1px;
 }
 
 #Donate_Line {
+  margin: 0px 48px;
   height: 1px;
   background-color: #fff;
-  width: 45%;
-  top: -40px;
   position: relative;
   z-index: 0;
+  flex: 1;
 }
