--- a/src/donate/Donate.css
+++ b/src/donate/Donate.css
@@ -9,6 +9,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   flex: 1;
+  font-family: "Roboto";
 }
 
 #Donate_DonationBox {
@@ -44,6 +45,10 @@
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
 }
 
+.Donate_FormGroup {
+  flex-direction: column;
+}
+
 @media (min-width: 1024px) {
   #Donate_Container {
     background-image: url("./donate_background_desktop.jpg");
@@ -57,5 +62,10 @@
   #Donate_SubHeader {
     font-size: 56px !important;
     text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2) !important;
+  }
+
+  .Donate_FormGroup {
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
