--- a/src/donate/DonationBody.css
+++ b/src/donate/DonationBody.css
@@ -84,3 +84,21 @@ button.Donate_Back {
   visibility: hidden !important;
   position: absolute;
 }
+
+.Donate_Encouragement {
+  margin: 24px 0px;
+  color: #2b2b22;
+  font-size: 14px;
+  font-style: italic;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: 300;
+}
+
+@media (min-width: 1024px) {
+  #Donate_DonationBody input {
+    min-width: 345px;
+    flex: 0;
+    margin-right: 70px;
+  }
+}
