--- a/src/donate/DonationBody.css
+++ b/src/donate/DonationBody.css
@@ -60,12 +60,6 @@ button.Donate_Back {
   font-size: 11pt;
 }
 
-#Donate_DonationBody select {
-  min-width: 360px !important;
-  height: 36px;
-  margin-right: 0 !important;
-}
-
 #Donate_DonationBody form h5 {
   margin-bottom: 16px;
 }
@@ -92,6 +86,13 @@ button.Donate_Back {
   position: absolute;
 }
 
+#Donate_DonationBody select {
+  height: 36px;
+  margin-right: 0 !important;
+  max-width: 100%;
+  width: 100%;
+}
+
 .Donate_Encouragement {
   margin: 24px 0px;
   color: #2b2b22;
@@ -103,6 +104,12 @@ button.Donate_Back {
 }
 
 @media (min-width: 1024px) {
+  #Donate_DonationBody select {
+    min-width: 360px !important;
+    height: 36px;
+    margin-right: 0 !important;
+  }
+
   #Donate_DonationBody input,
   #Donate_DonationBody select {
     min-width: 345px;
