--- a/src/donate/DonationHeader.css
+++ b/src/donate/DonationHeader.css
@@ -19,6 +19,22 @@
   text-align: center;
 }
 
+#Donate_DonationHeader h2 {
+  margin-top: 8px;
+  color: #fff;
+  font-family: "Roboto";
+  font-size: 32pt;
+  font-weight: 300;
+  letter-spacing: 3px;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+#Donate_DonationHeader span {
+  letter-spacing: 1.5px;
+  font-weight: 300;
+}
+
 #Donate_Steps {
   width: 100%;
   display: flex;
